--- a/src/app/ui/components/register/register.component.html
+++ b/src/app/ui/components/register/register.component.html
@@ -1,1 +1,155 @@
-<p>register works!</p>
+<div class="register-container">
+<div class="logo">
+    <!-- <img src="circle-logo.png" alt="TUMin Logo" class="logo-image"> -->
+    <div class="logo-text">
+      <span class="tum">TUM</span><span class="in" translate="no">in</span>
+      <span class="logo-subtext" style=" margin-left: 10px; font-style: italic;" translate="yes">For All Industrial Products</span>
+    </div>
+  </div>
+<div class="registerform">
+
+    <form [formGroup]="frm" (ngSubmit)="onSubmit(frm.value)">
+  
+      <div class="title_container">
+        <p class="title">Lütfen Kayıt Olunuz.</p>
+        <a class="subtitle" routerLink="login">Zaten üye iseniz, giriş yapmak için tıklayınız.</a>
+      </div>
+      <br>
+      <!-- <img class="mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57" /> -->
+  
+      <div class="form-floating">
+        <input type="nameSurname" formControlName="nameSurname" class="form-control" id="nameSurname"
+          placeholder="Name Surname" [ngClass]="{'is-invalid': (component['nameSurname'].invalid && component['nameSurname'].dirty) || (submitted && component['nameSurname'].invalid ),
+                                  'is-valid': component['nameSurname'].valid && frm.get('nameSurname').value}" />
+        <label for="nameSurname">Ad Soyad</label>
+  
+        <div class="invalid-feedback">
+          <div *ngIf="frm.get('nameSurname').hasError('required')">
+            Ad Soyad girmeniz gerkemektedir.
+          </div>
+          <div *ngIf="frm.get('nameSurname').hasError('minlength')">
+            Ad Soyad en az 3 karakter uzunluğunda olmalıdır.
+          </div>
+          <div *ngIf="frm.get('nameSurname').hasError('maxlength')">
+            Ad Soyad en fazla 50 karakter uzunluğunda olmalıdır.
+          </div>
+        </div>
+      </div>
+  
+  
+      <div class="form-floating">
+        <input type="username" formControlName="userName" class="form-control" id="userName" placeholder="User Name"
+          [ngClass]="{'is-invalid': (component['userName'].invalid && component['userName'].dirty) || (submitted && component['userName'].invalid),
+                                'is-valid': component['userName'].valid && frm.get('userName').value}" />
+        <label for="username">Kullanıcı Adı</label>
+  
+        <div class="invalid-feedback">
+          <div *ngIf="frm.get('userName').hasError('required')">
+            Kullanıcı Adı girmeniz gerkemektedir.
+          </div>
+          <div *ngIf="frm.get('userName').hasError('minlength')">
+            Kullanıcı Adı en az 3 karakter uzunluğunda olmalıdır.
+          </div>
+          <div *ngIf="frm.get('userName').hasError('maxlength')">
+            Kullanıcı Adı en fazla 50 karakter uzunluğunda olmalıdır.
+          </div>
+        </div>
+      </div>
+  
+  
+      <div class="form-floating">
+        <input type="email" formControlName="email" class="form-control" id="email" placeholder="name@example.com"
+          [ngClass]="{'is-invalid': (component['email'].invalid && component['email'].dirty) || (submitted && component['email'].invalid ),
+                                  'is-valid': component['email'].valid && frm.get('email').value}" />
+        <label for="email">Email</label>
+  
+        <div class="invalid-feedback">
+          <div *ngIf="frm.get('email').hasError('required')">
+            Email adresi gerkemektedir
+          </div>
+          <div *ngIf="frm.get('email').hasError('minlength')">
+            Email adresi en az 3 karakter uzunluğunda olmalıdır.
+          </div>
+          <div *ngIf="frm.get('email').hasError('maxlength')">
+            Email adresi en fazla 50 karakter uzunluğunda olmalıdır.
+          </div>
+          <div *ngIf="frm.get('email').hasError('email')">
+            Email adresi geçersizdir.
+          </div>
+        </div>
+      </div>
+  
+      <div class="form-floating">
+        <input type="password" formControlName="password" class="form-control" id="password" placeholder="Password"
+          [ngClass]="{'is-invalid': (component['password'].invalid && component['password'].dirty) || (submitted && component['password'].invalid ),
+                                'is-valid': component['password'].valid && frm.get('password').value}" />
+        <label for="password">Şifre</label>
+  
+  
+        <div class="invalid-feedback">
+          <div *ngIf="frm.get('password').hasError('required')">
+            Şifre gerkemektedir.
+          </div>
+          <div *ngIf="frm.get('password').hasError('minlength')">
+            Şifre en az 8 karakter uzunluğunda olmalıdır.
+          </div>
+        </div>
+      </div>
+  
+      <div class="form-floating">
+        <input type="password" formControlName="confirmPassword" class="form-control" id="confirmPassword"
+          placeholder="Confirm Password"
+          [ngClass]="{
+                      'is-invalid': (frm.get('confirmPassword').invalid && frm.get('confirmPassword').dirty) || (submitted && frm.get('confirmPassword').invalid),
+                      'is-valid': frm.get('confirmPassword').valid && frm.get('password').value === frm.get('confirmPassword').value}" />
+        <label for="confirmPassword">Şifre doğrula </label>
+  
+        <div class="invalid-feedback">
+          <div *ngIf="frm.get('confirmPassword').hasError('required')">
+            Şifre doğrulama gerkemektedir.
+          </div>
+          <div *ngIf="frm.get('confirmPassword').hasError('notSame')">
+            Doğrulama şifresi ile şifre aynı olmalıdır.
+          </div>
+          <div *ngIf="frm.get('confirmPassword').hasError('minlength')">
+            Şifre doğrulama en az 8 karakter uzunluğunda olmalıdır.
+          </div>
+        </div>
+      </div>
+  
+  
+      <!-- <div class="checkbox mb-3">
+                      <label>
+                          <input type="checkbox" value="remember-me" /> Remember me
+                      </label>
+                  </div> -->
+      <button title="Sign Up" type="submit" class="sign-in_btn" style="background-color: rgb(255, 102, 0);">
+        <span>Kayıt Ol</span>
+      </button>
+  
+      <div class="separator">
+        <hr class="line">
+        <span>Veya</span>
+        <hr class="line">
+      </div>
+
+      <br>
+  
+      <br>
+      <br>
+      <button title="Sign In" type="submit" class="sign-in_apl">
+        <svg preserveAspectRatio="xMidYMid" version="1.1" viewBox="0 0 256 315" height="20px" width="16px"
+          xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
+          <g>
+            <path fill="#ffffff"
+              d="M213.803394,167.030943 C214.2452,214.609646 255.542482,230.442639 256,230.644727 C255.650812,231.761357 249.401383,253.208293 234.24263,275.361446 C221.138555,294.513969 207.538253,313.596333 186.113759,313.991545 C165.062051,314.379442 158.292752,301.507828 134.22469,301.507828 C110.163898,301.507828 102.642899,313.596301 82.7151126,314.379442 C62.0350407,315.16201 46.2873831,293.668525 33.0744079,274.586162 C6.07529317,235.552544 -14.5576169,164.286328 13.147166,116.18047 C26.9103111,92.2909053 51.5060917,77.1630356 78.2026125,76.7751096 C98.5099145,76.3877456 117.677594,90.4371851 130.091705,90.4371851 C142.497945,90.4371851 165.790755,73.5415029 190.277627,76.0228474 C200.528668,76.4495055 229.303509,80.1636878 247.780625,107.209389 C246.291825,108.132333 213.44635,127.253405 213.803394,167.030988 M174.239142,50.1987033 C185.218331,36.9088319 192.607958,18.4081019 190.591988,0 C174.766312,0.636050225 155.629514,10.5457909 144.278109,23.8283506 C134.10507,35.5906758 125.195775,54.4170275 127.599657,72.4607932 C145.239231,73.8255433 163.259413,63.4970262 174.239142,50.1987249">
+            </path>
+          </g>
+        </svg>
+        <span>Sign Up with Apple</span>
+      </button>
+      <p class="note">Terms of use &amp; Conditions</p>
+  
+    </form>
+  </div>
+</div>
