--- a/src/app/ui/components/home/home.component.scss
+++ b/src/app/ui/components/home/home.component.scss
@@ -311,6 +311,6 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 30px 60px;
-  background-image: linear-gradient(to top, #bf1300, #f51900);
+  background-image: linear-gradient(to bottom, rgba(12, 108, 212, 0), rgba(35, 41, 50, .15) 37%), linear-gradient(to bottom, #e53935, #e53935);
   color: #fff;
 }
