--- a/src/app/ui/components/register/register.component.scss
+++ b/src/app/ui/components/register/register.component.scss
@@ -1,3 +1,11 @@
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
+
+$primary-color: #003366;
+$secondary-color: #f0f0f0;
+$accent-color: #e74c3c;
+$text-color: #333;
+$light-text: #fff;
+
 .register-container{
     margin-top: 40px;
     display: flex;
@@ -37,6 +45,29 @@
     margin-left: 5px;
     vertical-align: super;
     line-height: 1;
+  }
+
+  .title {
+    font-size: 24px;
+    color: $primary-color;
+    margin-bottom: 10px;
+    text-align: center;
+  }
+
+  .subtitle {
+    font-size: 14px;
+    color: $text-color;
+    margin-bottom: 20px;
+    text-align: center;
+
+    a {
+      color: $accent-color;
+      text-decoration: none;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
   }
 
 .registerform {
@@ -250,21 +281,6 @@
     cursor: pointer;
   }
   
-  .separator {
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    gap: 30px;
-    color: #8B8E98;
-  }
-  
   .separator .line {
     display: block;
     width: 100%;
@@ -296,3 +312,91 @@
     margin-top: -0.8rem;
     margin-bottom: 1rem;
   }
+
+  .btn-register {
+    width: 100%;
+    padding: 12px;
+    background-color: $primary-color;
+    color: $light-text;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+
+    &:hover {
+      background-color: darken($primary-color, 10%);
+    }
+  }
+
+  .separator {
+    text-align: center;
+    margin: 20px 0;
+
+    span {
+      display: inline-block;
+      padding: 0 10px;
+      background-color: $light-text;
+      position: relative;
+      z-index: 1;
+      color: $text-color;
+    }
+
+    &::before {
+      content: '';
+      display: block;
+      height: 1px;
+      background-color: #ddd;
+      position: relative;
+      top: 11px;
+    }
+  }
+
+  .btn-social {
+    width: 100%;
+    padding: 12px;
+    background-color: $light-text;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s ease;
+
+    i {
+      margin-right: 10px;
+    }
+
+    &:hover {
+      background-color: darken($light-text, 5%);
+    }
+
+    &.apple {
+      color: #000;
+    }
+  }
+
+  .terms {
+    font-size: 12px;
+    color: $text-color;
+    text-align: center;
+    margin-top: 20px;
+
+    a {
+      color: $primary-color;
+      text-decoration: none;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+
+
+@media (max-width: 480px) {
+  .register-form {
+    padding: 20px;
+  }
+}
