--- a/src/app/ui/components/home/home.component.html
+++ b/src/app/ui/components/home/home.component.html
@@ -1,4 +1,5 @@
 <app-main-header></app-main-header>
+<app-navbar></app-navbar>
 
 <!-- Professional Carousel Section -->
 <section class="hero-carousel">
